--- a/Changes
+++ b/Changes
@@ -1,25 +1,26 @@
-Changes since 0.4:
+Revision history for {{$dist->name}}
 
-* Add Changes file
-* Update dist.ini for Kwalitee
+{{$NEXT}}
 
-Changes in release 0.4
+        * Add Changes file
+        * Update dist.ini for Kwalitee
 
-* Remove smartmatch usage
-* Fix precedence issue with return
-* Update dist.ini
-* Update Dancer syntax
+0.4 Tue Aug 12 23:23:06 2014 -0500
 
-Changes in release 0.3
+        * Remove smartmatch usage
+        * Fix precedence issue with return
+        * Update dist.ini
+        * Update Dancer syntax
 
-* New utility - lists delegation targets for native traits.
-    (Idea from RJBS on #moose.)
-* Start tracking applied traits.
-* Skip things that start with a dot when building file list
-* Dial logging down to 'warning'
-* Handle being called with path name
-* Sort tree
-* Print out default attr when constrait is undef
-* Add constraint-less attribute to tests
-* Depend on Moose 2.000
+0.3 Thu Apr 14 09:21:00 2011 -0400
+
+        * New utility - lists delegation targets for native traits. (Idea from RJBS on #moose.)
+        * Start tracking applied traits.
+        * Skip things that start with a dot when building file list
+        * Dial logging down to 'warning'
+        * Handle being called with path name
+        * Sort tree
+        * Print out default attr when constrait is undef
+        * Add constraint-less attribute to tests
+        * Depend on Moose 2.000
 
