--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+        * Update repo metadata
+
 0.6       2015-03-13 09:42:31-07:00 America/Los_Angeles
 
         * Fix failing test (Pete Houston)
